recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:5: error: not found: value l1
  l1::l.head
  ^Remove:5: error: value :: is not a member of Int
  l1::l.head
    ^Remove:8: error: not found: value l1
  l1::l.tail
  ^Remove:9: error: not enough arguments for method remove: (l: List[Int], v: Int)List[Int].
Unspecified value parameter v.
  return remove(l1)
               ^